src/app/globals.scss
@use "../styles/mixins" as *;
@use "../styles/variables" as *;

:root{
    --body-bkg: #{$white};
    --header-bkg: #{$light-blue};
    --invoices-count: #{$gray};
    --checkbox-bkg: #{$light-gray};
    --invoice-bkg: #FFFFFF;
    --invoice-name: #858BB2;
    --invoice-due: #{$bluish-gray};
    --filter-bkg: #FFF;
    --action-lbl: #{$bluish-gray};
    --input-border: 1px solid #{$light-gray};
    --overlay-bkg: #FFFFFF;
    --input-bkg: #FFFFFF;
    --calendar-disable: #{$blacker};
    --btn-secondary: #F9FAFE;
}

[data-theme='dark']{
    --body-bkg: #{$black};
    --header-bkg: #{$dark-blue};
    --invoice-count: #{$light-gray};
    --checkbox-bkg: #{$dark-blue};
    --invoice-bkg: #{$dark-blue};
    --invoice-name: #FFFFFF;
    --invoice-due: #{$light-gray};
    --filter-bkg: #{$blue};
    --action-lbl: #{$gray};
    --input-border: 1px solid #{$blue};
    --overlay-bkg: #{$black};
    --input-bkg: #{$dark-blue};
    --calendar-disable: #{$light-gray};
    --btn-secondary: #{$blue};
}

html{
    box-sizing: border-box;
    height: 100%;
}

*, *::before, *::after{
    padding: 0;
    margin: 0;
    box-sizing: inherit;
}

a{
    text-decoration: none;
    color: unset;
}

body{
    min-height: 100%;
    background-color: var(--body-bkg);

    @include desktop{
        display: grid;
        grid-template-rows: 100%;
        grid-template-columns: fit-content(0) auto;
        grid-template-areas: "header main";
    }
}

header{
    background-color: var(--header-bkg);

    @include desktop{
        grid-area: header;
    }
}

main{
    position: relative;

    @include desktop{
        grid-area: main;
    }
}

button{
    border: none;
    background-color: inherit;
    font-family: inherit;

    &:hover{
        cursor: pointer;
    }
}

ul{
    list-style: none;
}

input[type="checkbox"]{
    all: unset;
}

input[type="button"]{
    cursor: pointer;
}

input[type="checkbox"] + label{
    @include heading-sv;
    position: relative;
    padding-left: 3.25rem;

    &:hover{
        cursor: pointer;
    }
}

input[type="checkbox"] + label::before{
    content: " ";
    display: block;
    width: 1rem;
    height: 1rem;
    position: absolute;
    top: -2px;
    border-radius: 0.125rem;
    background-color: var(--checkbox-bkg);
    left: 1.5rem;
}

input[type="checkbox"]:checked + label::before{
    background-color: $purple;
    content: url("../../public/icons/icon-check.svg");
    display: flex;
    align-items: center;
    justify-content: center;
}

input[type="checkbox"] + label:hover::before{
    border: 1px solid $purple;
}

fieldset{
    border: none;
}

.btn{

    &--purple{
        background-color: $purple;
    
        &:hover{
            background-color: $light-purple;
        }
    }

    &--secondary{
        background-color: var(--btn-secondary);
    }
}

